@@ -1,6 +1,7 @@
 package com.bakery.app.config;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -17,6 +18,10 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
+/**
+ * Security Configuration
+ * Configures Spring Security with JWT authentication and CORS
+ */
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
@@ -24,29 +29,57 @@ public class SecurityConfig {
     
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     
+    @Value("${cors.allowed.origins}")
+    private String allowedOrigins;
+    
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+        // BCrypt with strength 12 for production-grade security
+        return new BCryptPasswordEncoder(12);
     }
     
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+            // Disable CSRF for stateless JWT authentication
             .csrf(csrf -> csrf.disable())
+            
+            // Configure CORS
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            
+            // Stateless session management
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            
+            // Security headers
+            .headers(headers -> headers
+                .frameOptions(frame -> frame.deny())
+                .xssProtection(xss -> xss.disable()) // Using CSP instead
+                .contentTypeOptions(contentType -> contentType.disable())
+            )
+            
+            // Authorization rules
             .authorizeHttpRequests(auth -> auth
+                // Health check and actuator endpoints
+                .requestMatchers("/actuator/health", "/actuator/info").permitAll()
+                .requestMatchers("/actuator/**").hasRole("ADMIN")
+                
                 // Public endpoints - authentication
                 .requestMatchers("/api/customers/register", "/api/customers/login").permitAll()
                 .requestMatchers("/api/customers/forgot-password", "/api/customers/reset-password").permitAll()
-                .requestMatchers("/api/admin/register", "/api/admin/login").permitAll()
+                .requestMatchers("/api/admin/login").permitAll()
                 
-                // Swagger/OpenAPI endpoints
+                // Swagger/OpenAPI endpoints (disable in production)
                 .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
                 
                 // Public endpoints - browsing
                 .requestMatchers("/api/items/**", "/api/categories/**").permitAll()
                 .requestMatchers("/api/reviews/item/**").permitAll()
+                
+                // Payment webhooks
+                .requestMatchers("/api/webhooks/**").permitAll()
+                
+                // Payment endpoints (authenticated)
+                .requestMatchers("/api/payments/**").authenticated()
                 
                 // Admin endpoints
                 .requestMatchers("/api/admin/**").hasRole("ADMIN")
@@ -62,6 +95,8 @@ public class SecurityConfig {
                 // All other requests require authentication
                 .anyRequest().authenticated()
             )
+            
+            // Add JWT filter
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
         
         return http.build();
@@ -70,11 +105,16 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:3001"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        
+        // Use environment variable for allowed origins
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        configuration.setAllowedOrigins(origins);
+        
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Disposition"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L); // Cache preflight for 1 hour
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
